[package]
name = "heartwood"
version = "0.1.1"
edition = "2021"
description = "An experimental cross-platform UI state management framework inspired by React libraries such as Jotai/Recoil"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
